Fixes small issues in tests